--- a/credits.html
+++ b/credits.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<!-- InstanceBeginEditable name="doctitle" -->
-<title>Ultrasound Therapy</title>
+<title>Project - Credits</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -42,12 +42,23 @@ class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/customertestimonials.html">Customer Testimonials</a>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>
 	</div>
-	<aside><!-- InstanceBeginEditable name="right panel" --><img src="ultrasound.jpeg" alt="Demonstration of ultrasound therapy" title="Ultrasound Therapy"><!-- InstanceEndEditable --></aside>
-	<main><!-- InstanceBeginEditable name="maincontent" --><h1>Services</h1>
-		<p><strong>Ultrasound Therapy</strong></p>
-		<p>Ultrasound therapy can be useful for many different patients. The 'micro-massage' that ultrasound creates can help reduce swelling, increase blood flow, and decrease pain, stiffness, and spasms, making it a viable therapy for numerous applications.</p>
-		<p>From patients who have suffered car accidents to those that have chronic back pain from any number of sources, ultrasound therapy can help them.</p>
-		<p>This ultrasound creates small sound waves that in effect vibrate and massage soft tissues and muscle. These sound waves do an excellent job in facilitating the body's healing process in addition to decreasing scar tissue formation.</p><!-- InstanceEndEditable --> 
+	<aside><!-- InstanceBeginEditable name="right panel" -->
+	  <h2>Links</h2>
+	  <p><a href="https://allenchiropractictoday.com/">Allen Chiropractic</a></p>
+	  <p><a href="https://www.kennesaw.edu/">Kennesaw State Univerity</a></p>
+	<!-- InstanceEndEditable --></aside>
+	<main><!-- InstanceBeginEditable name="maincontent" -->
+	  <h1>Credits</h1>
+	  <p>This website was designed for a school project in our Web Development I class for Kennesaw State University. </p>
+	  <p>Content and images involved come directly from Allen Chiropractic's website.</p>
+	  <h4><strong>Group Members</strong></h4>
+	  <p>Jeffery Crawford: Creator of the brand new logo, home page, customer testimonials page, subluxation treatment page, and Dr. Allen page.</p>
+	  <p>Simon Butterworth: Creator of the directions, contact us page, sitemap, and x-ray page.</p>
+	  <p>Sam Schouten: Creator of the chiropracticmanipulation page, ultrasound therapy page, electric muscle stimulation page, and cryotherapy page.</p>
+	  <p>Will Vandenbos: Developed the graphics involved with the CSS template, created the frequently asked questions page, feedback page, and credits page. </p>
+	  <p>&nbsp;</p>
+	  <pre><a href="https://allenchiropractictoday.com/"></a></pre>
+	<!-- InstanceEndEditable --> 
 	</main>
 	<div id="footer" align="center">
 		<h4><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectindex.html">Home</a> | 1050 Richard D. Sailors Pkwy, Suite 200 Powder Springs, GA 30172-1742| 770-943-8409<br> copyright &copy; 2021| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/credits.html">Credits</a></h4>
