--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<!-- InstanceBeginEditable name="doctitle" -->
-<title>Ultrasound Therapy</title>
+<title>Sitemap</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -42,12 +42,56 @@ class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/customertestimonials.html">Customer Testimonials</a>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>
 	</div>
-	<aside><!-- InstanceBeginEditable name="right panel" --><img src="ultrasound.jpeg" alt="Demonstration of ultrasound therapy" title="Ultrasound Therapy"><!-- InstanceEndEditable --></aside>
-	<main><!-- InstanceBeginEditable name="maincontent" --><h1>Services</h1>
-		<p><strong>Ultrasound Therapy</strong></p>
-		<p>Ultrasound therapy can be useful for many different patients. The 'micro-massage' that ultrasound creates can help reduce swelling, increase blood flow, and decrease pain, stiffness, and spasms, making it a viable therapy for numerous applications.</p>
-		<p>From patients who have suffered car accidents to those that have chronic back pain from any number of sources, ultrasound therapy can help them.</p>
-		<p>This ultrasound creates small sound waves that in effect vibrate and massage soft tissues and muscle. These sound waves do an excellent job in facilitating the body's healing process in addition to decreasing scar tissue formation.</p><!-- InstanceEndEditable --> 
+	<aside><!-- InstanceBeginEditable name="right panel" --><!-- InstanceEndEditable --></aside>
+	<main><!-- InstanceBeginEditable name="maincontent" --><h2>Sitemap:</h2> <!--The following list will contain a link to every page in the project-->
+
+		<ul>
+
+			<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectindex.html">Home</a></li>
+
+			<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/drallen.html">Meet Dr. Allen</a></li>
+
+			<li>Services
+
+				<ul>
+
+				<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/chiropractic.html">Chiropractic Manipulation</a></li>
+
+				<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/ultrasound.html">Ultrasound Therapy</a></li>
+
+					<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/electricalmuscle.html">Electrical Muscle Stimulation</a></li>
+
+					<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/cryotherapy.html">Cryotherapy</a></li>
+
+					<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/xray.html">X-Ray</a></li>
+
+					<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/subluxation.html">Subluxation Treatment</a></li>
+
+				</ul>
+
+				<li>Business Information
+
+				<ul>
+
+				<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/directions.html">Directions</a></li>
+
+				<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/contactus.html">Contact Us</a></li>
+
+				</ul></li>
+
+			<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectfeedback.html">Feedback</a></li>
+
+			<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/credits.html">Credits</a></li>
+
+			<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/faqs.html">FAQs</a></li>
+
+			<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/customertestimonials.html">Customer Testimonials</a></li>
+
+			<li><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a></li>
+
+		
+
+		</ul><!-- InstanceEndEditable --> 
 	</main>
 	<div id="footer" align="center">
 		<h4><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectindex.html">Home</a> | 1050 Richard D. Sailors Pkwy, Suite 200 Powder Springs, GA 30172-1742| 770-943-8409<br> copyright &copy; 2021| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/credits.html">Credits</a></h4>
