--- a/chiropractic.html
+++ b/chiropractic.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html><!-- InstanceBegin template="../../../My Site/Templates/project.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="/Templates/project.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 	<!-- InstanceBeginEditable name="doctitle" -->
-<title>Ultrasound Therapy</title>
+<title>Chiropractic </title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -42,12 +42,16 @@ class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/customertestimonials.html">Customer Testimonials</a>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>
 	</div>
-	<aside><!-- InstanceBeginEditable name="right panel" --><img src="ultrasound.jpeg" alt="Demonstration of ultrasound therapy" title="Ultrasound Therapy"><!-- InstanceEndEditable --></aside>
+	<aside><!-- InstanceBeginEditable name="right panel" --><img src="chiropractic.jpeg" alt="" width="200" id="chripractic"><!-- InstanceEndEditable --></aside>
 	<main><!-- InstanceBeginEditable name="maincontent" --><h1>Services</h1>
-		<p><strong>Ultrasound Therapy</strong></p>
-		<p>Ultrasound therapy can be useful for many different patients. The 'micro-massage' that ultrasound creates can help reduce swelling, increase blood flow, and decrease pain, stiffness, and spasms, making it a viable therapy for numerous applications.</p>
-		<p>From patients who have suffered car accidents to those that have chronic back pain from any number of sources, ultrasound therapy can help them.</p>
-		<p>This ultrasound creates small sound waves that in effect vibrate and massage soft tissues and muscle. These sound waves do an excellent job in facilitating the body's healing process in addition to decreasing scar tissue formation.</p><!-- InstanceEndEditable --> 
+		<p><strong>Chiropractic Manipulation</strong></p>
+		<p><strong>Spinal Manipulation</strong></p>
+		<p>The most common therapeutic procedure performed by doctors of chiropractic, also called "chiropractic adjustment." The purpose of manipulation is to restore joint mobility by manually applying a controlled force into joints that have become hypomobile – or restricted in their movement – as a result of a tissue injury. Tissue injury can be caused by:</p>
+		<p>Single Tramatic Event</p>
+		<p>Improper lifting of a heavy object</p>
+		<p>Repetitive stresses</p>
+		<p>Sitting in an awkward position with poor spinal posture for an extended period of time</p>
+		<p>In either case, injured tissues undergo physical and chemical changes that can cause inflammation, pain, and diminished function for the sufferer. Manipulation, or adjustment of the affected joint and tissues, restores mobility, thereby alleviating pain and muscle tightness, and allowing tissues to heal.</p><!-- InstanceEndEditable --> 
 	</main>
 	<div id="footer" align="center">
 		<h4><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectindex.html">Home</a> | 1050 Richard D. Sailors Pkwy, Suite 200 Powder Springs, GA 30172-1742| 770-943-8409<br> copyright &copy; 2021| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/credits.html">Credits</a></h4>
