--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<!-- InstanceBeginEditable name="doctitle" -->
-<title>Ultrasound Therapy</title>
+<title>Contact Page</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -42,12 +42,24 @@ class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/customertestimonials.html">Customer Testimonials</a>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>
 	</div>
-	<aside><!-- InstanceBeginEditable name="right panel" --><img src="ultrasound.jpeg" alt="Demonstration of ultrasound therapy" title="Ultrasound Therapy"><!-- InstanceEndEditable --></aside>
-	<main><!-- InstanceBeginEditable name="maincontent" --><h1>Services</h1>
-		<p><strong>Ultrasound Therapy</strong></p>
-		<p>Ultrasound therapy can be useful for many different patients. The 'micro-massage' that ultrasound creates can help reduce swelling, increase blood flow, and decrease pain, stiffness, and spasms, making it a viable therapy for numerous applications.</p>
-		<p>From patients who have suffered car accidents to those that have chronic back pain from any number of sources, ultrasound therapy can help them.</p>
-		<p>This ultrasound creates small sound waves that in effect vibrate and massage soft tissues and muscle. These sound waves do an excellent job in facilitating the body's healing process in addition to decreasing scar tissue formation.</p><!-- InstanceEndEditable --> 
+	<aside><!-- InstanceBeginEditable name="right panel" --><!-- InstanceEndEditable --></aside>
+	<main><!-- InstanceBeginEditable name="maincontent" --><h2>Contact Us:</h2>
+
+		<h4>Phone:<br>770-943-8409</h4><!--phone-->
+
+		<h4>Email:<br>allen.chiropractic@bellsouth.net</h4><!--email-->
+
+		<h2>Office Hours:</h2><!--Office hours-->
+
+		<h4>Mon, Wed, Fri:<br> 9:00a.m. - 12:00p.m.<br>2:00p.m. - 6:00p.m.</h4>
+
+		<h4>Sat:<br>8:00a.m. - 11:00a.m.</h4>
+
+	<h2>NOTICE:</h2><!--cancelation notice-->
+
+		<p>Our office requires a 24 hour notice for all missed appointments. If you cannot make an appointment, please give our office a call at the phone number listed above. This will allow others who may need care an appointment. By calling our office you will avoid a $30.00 no-show fee.</p>
+		<p>&nbsp;</p>
+	<!-- InstanceEndEditable --> 
 	</main>
 	<div id="footer" align="center">
 		<h4><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectindex.html">Home</a> | 1050 Richard D. Sailors Pkwy, Suite 200 Powder Springs, GA 30172-1742| 770-943-8409<br> copyright &copy; 2021| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/credits.html">Credits</a></h4>
