--- a/directions.html
+++ b/directions.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<!-- InstanceBeginEditable name="doctitle" -->
-<title>Ultrasound Therapy</title>
+<title>Directions</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -42,12 +42,22 @@ class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/customertestimonials.html">Customer Testimonials</a>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>
 	</div>
-	<aside><!-- InstanceBeginEditable name="right panel" --><img src="ultrasound.jpeg" alt="Demonstration of ultrasound therapy" title="Ultrasound Therapy"><!-- InstanceEndEditable --></aside>
-	<main><!-- InstanceBeginEditable name="maincontent" --><h1>Services</h1>
-		<p><strong>Ultrasound Therapy</strong></p>
-		<p>Ultrasound therapy can be useful for many different patients. The 'micro-massage' that ultrasound creates can help reduce swelling, increase blood flow, and decrease pain, stiffness, and spasms, making it a viable therapy for numerous applications.</p>
-		<p>From patients who have suffered car accidents to those that have chronic back pain from any number of sources, ultrasound therapy can help them.</p>
-		<p>This ultrasound creates small sound waves that in effect vibrate and massage soft tissues and muscle. These sound waves do an excellent job in facilitating the body's healing process in addition to decreasing scar tissue formation.</p><!-- InstanceEndEditable --> 
+	<aside><!-- InstanceBeginEditable name="right panel" --><!-- InstanceEndEditable --></aside>
+	<main><!-- InstanceBeginEditable name="maincontent" --><h3>Directions:</h3><!-- Page Name -->
+
+		<p>Come visit our office today! We are located at:</p> <!-- Introduction-->
+
+		<p>11050 Rischard D. Sailors Pkwy, Suite 200<br>
+
+	    Powder Springs, GA 30172-1742</p> <!--Address of the practice-->
+
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3312.965472991437!2d-84.68233958494055!3d33.86478068065739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f53cadecf91a6d%3A0xbd6c49b4a02ed4d4!2s1050%20Richard%20D%20Sailors%20Pkwy%2C%20Powder%20Springs%2C%20GA%2030127!5e0!3m2!1sen!2sus!4v1627366604501!5m2!1sen!2sus" width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy">
+
+		</iframe> <!--Link to google maps-->
+
+		<p>We hope to see you here!</p>
+
+<!-- InstanceEndEditable --> 
 	</main>
 	<div id="footer" align="center">
 		<h4><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectindex.html">Home</a> | 1050 Richard D. Sailors Pkwy, Suite 200 Powder Springs, GA 30172-1742| 770-943-8409<br> copyright &copy; 2021| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/credits.html">Credits</a></h4>
