--- a/projectfeedback.html
+++ b/projectfeedback.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html><!-- InstanceBegin template="../../../My Site/Templates/project.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="/Templates/project.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 	<!-- InstanceBeginEditable name="doctitle" -->
-<title>Feedback</title>
+<title>Feedback Page</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
 
-<link rel="stylesheet" href="../../../My%20Site/style.css" type="text/css">
+<link rel="stylesheet" href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/style.css" type="text/css">
 </head>
 
 <body>
@@ -16,39 +16,38 @@
 <div id="container">
 
 <div id="header">
-	<img id="logo" src="../../../My%20Site/logo.jpg" width="290" height="150" alt"" /> 
+	<img src="acnewlogo.jpg" alt width="200" height="150" id="acnewlogo" title="Allen Chiropractic""Allen Chiropractic" /> 
 		
 	</div>
 <div class="navbar">
-<a href="#">Home</a>
-<a href="#">Meet Dr.Allen</a>
+<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectindex.html">Home</a>
+<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/drallen.html">Meet Dr.Allen</a>
 <div class="dropdown">
 	<button 
 class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
 	<div class="dropdown-content">
-		<a href="#">Chiropractic <br>Manipulation</a>
-		<a href="#">Ultrasound<br>Therapy</a>
-		<a href="#">Electrical<br>Muscle<br>Stimulation</a>
-		<a href="#">Cryotherapy</a>
-		<a href="#">X-Ray</a>
-		<a href="#">Subluxation<br>Treatment</a>
+		<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/chiropractic.html">Chiropractic <br>Manipulation</a>
+		<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/ultrasound.html">Ultrasound<br>Therapy</a>
+		<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/electricalmuscle.html">Electrical<br>Muscle<br>Stimulation</a>
+		<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/cryotherapy.html">Cryotherapy</a>
+		<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/xray.html">X-Ray</a>
+		<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/subluxation.html">Subluxation<br>Treatment</a>
 	</div>
 	</div>
-	<a href="#">Directions</a>
-	<a href="#">Contact Us</a>
-	<a href="#">Feedback</a>
-	<a href="#">Credits</a>
-	<a href="#">FAQs</a>
-	<a href="#">Customer Testimonials</a>
-	<a href="#">Sitemap</a>
+	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/directions.html">Directions</a>
+	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/contactus.html">Contact Us</a>
+	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectfeedback.html">Feedback</a>
+	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/credits.html">Credits</a>
+	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/faqs.html">FAQs</a>
+	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/customertestimonials.html">Customer Testimonials</a>
+	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>
 	</div>
 	<aside><!-- InstanceBeginEditable name="right panel" --><!-- InstanceEndEditable --></aside>
-	<main><!-- InstanceBeginEditable name="maincontent" -->
-	  <h1>Give us Your Feedback!</h1>
+	<main><!-- InstanceBeginEditable name="maincontent" --><h1>Give us Your Feedback!</h1>
 		<form action="http://www.formbuddy.com/cgi-bin/form.pl" method="post">
 <input type="hidden" name="username" value="vandyv35">
 <input type="hidden" name="reqd" value="1,2">
-<input type="hidden" name="url" value="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectthankyou.html">
+<input type="hidden" name="url" value="http://studentweb.kennesaw.edu/~wvandenb/3260/project/thankyou.html">
 	    <table width="70%" border="0" align="center">
 	      <tbody>
 	        <tr>
@@ -141,10 +140,10 @@ class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
         </table>
 	    <p>&nbsp;</p>
     </form>
-	  <p>&nbsp;</p><!-- InstanceEndEditable --> 
+<!-- InstanceEndEditable --> 
 	</main>
 	<div id="footer" align="center">
-		<h4>Home | 1050 Richard D. Sailors Pkwy, Suite 200 Powder Springs, GA 30172-1742| 770-943-8409<br> copyright &copy; 2021| <a href="../../../My%20Site/sitemap.html">Sitemap</a>| <a href="../../../My%20Site/credits.html">Credits</a></h4>
+		<h4><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectindex.html">Home</a> | 1050 Richard D. Sailors Pkwy, Suite 200 Powder Springs, GA 30172-1742| 770-943-8409<br> copyright &copy; 2021| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/credits.html">Credits</a></h4>
 		<p>
     <a href="http://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
