--- a/thankyou.html
+++ b/thankyou.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html><!-- InstanceBegin template="../../../My Site/Templates/project.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="/Templates/project.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 	<!-- InstanceBeginEditable name="doctitle" -->
-<title>Ultrasound Therapy</title>
+<title>Thank You Page</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -42,12 +42,13 @@ class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/customertestimonials.html">Customer Testimonials</a>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>
 	</div>
-	<aside><!-- InstanceBeginEditable name="right panel" --><img src="ultrasound.jpeg" alt="Demonstration of ultrasound therapy" title="Ultrasound Therapy"><!-- InstanceEndEditable --></aside>
-	<main><!-- InstanceBeginEditable name="maincontent" --><h1>Services</h1>
-		<p><strong>Ultrasound Therapy</strong></p>
-		<p>Ultrasound therapy can be useful for many different patients. The 'micro-massage' that ultrasound creates can help reduce swelling, increase blood flow, and decrease pain, stiffness, and spasms, making it a viable therapy for numerous applications.</p>
-		<p>From patients who have suffered car accidents to those that have chronic back pain from any number of sources, ultrasound therapy can help them.</p>
-		<p>This ultrasound creates small sound waves that in effect vibrate and massage soft tissues and muscle. These sound waves do an excellent job in facilitating the body's healing process in addition to decreasing scar tissue formation.</p><!-- InstanceEndEditable --> 
+	<aside><!-- InstanceBeginEditable name="right panel" -->
+	  <h3><img src="thankyou.jpg" alt="Thank you picture provided by https://www.123rf.com/stock-photo/thank_you.html" width="200" height="200" title="Thank you"/></h3>
+	<!-- InstanceEndEditable --></aside>
+	<main><!-- InstanceBeginEditable name="maincontent" -->
+	  <h1>Thank you!</h1>
+	  <p>We appreciate your time and feedback to our site. Your opinions matter the most. </p>
+	<!-- InstanceEndEditable --> 
 	</main>
 	<div id="footer" align="center">
 		<h4><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectindex.html">Home</a> | 1050 Richard D. Sailors Pkwy, Suite 200 Powder Springs, GA 30172-1742| 770-943-8409<br> copyright &copy; 2021| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/credits.html">Credits</a></h4>
