--- a/xray.html
+++ b/xray.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<!-- InstanceBeginEditable name="doctitle" -->
-<title>Ultrasound Therapy</title>
+<title>X-Ray</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -42,12 +42,16 @@ class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/customertestimonials.html">Customer Testimonials</a>
 	<a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>
 	</div>
-	<aside><!-- InstanceBeginEditable name="right panel" --><img src="ultrasound.jpeg" alt="Demonstration of ultrasound therapy" title="Ultrasound Therapy"><!-- InstanceEndEditable --></aside>
-	<main><!-- InstanceBeginEditable name="maincontent" --><h1>Services</h1>
-		<p><strong>Ultrasound Therapy</strong></p>
-		<p>Ultrasound therapy can be useful for many different patients. The 'micro-massage' that ultrasound creates can help reduce swelling, increase blood flow, and decrease pain, stiffness, and spasms, making it a viable therapy for numerous applications.</p>
-		<p>From patients who have suffered car accidents to those that have chronic back pain from any number of sources, ultrasound therapy can help them.</p>
-		<p>This ultrasound creates small sound waves that in effect vibrate and massage soft tissues and muscle. These sound waves do an excellent job in facilitating the body's healing process in addition to decreasing scar tissue formation.</p><!-- InstanceEndEditable --> 
+	<aside><!-- InstanceBeginEditable name="right panel" --><img src="x-ray.jpg" alt="X-ray scan" width="200" height="200" title="X-ray"/><!--This image is from https://www.imaginghealthcare.com/diagnostic-imaging/digital-x-ray/--><!-- InstanceEndEditable --></aside>
+	<main><!-- InstanceBeginEditable name="maincontent" --><h2>X-Rays:</h2> <!--This is the information from the xray page-->
+
+	<p style="text-indent:25px">Radiographs or x-rays are used to see the bones. X-rays do not detect soft tissue abnormalities like torn ligaments or strained muscles. However, they are a valuable source of information and helps the doctor to determine important information such as misalignments of the bones, possible fractures or breaks, as well as the level of current degeneration of your joints.</p>
+
+	<p style="text-indent:25px">Along with the examination, x-rays help to determine the treatment plan and possibility of inherent risks associated with chiropractic manipulation.</p>
+
+	<p style="text-indent:25px">On your follow-up visit, Dr. Allen will show you your x-rays and discuss them in depth with you. He will show you your spinal alignment, areas of degeneration (if applicable), and the areas of concern for treatment. After that point, you will have the opportunity to discuss any questions or concerns about your condition with him.</p>
+	<p style="text-indent:25px">&nbsp;</p>
+	<!-- InstanceEndEditable --> 
 	</main>
 	<div id="footer" align="center">
 		<h4><a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/projectindex.html">Home</a> | 1050 Richard D. Sailors Pkwy, Suite 200 Powder Springs, GA 30172-1742| 770-943-8409<br> copyright &copy; 2021| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/sitemap.html">Sitemap</a>| <a href="http://studentweb.kennesaw.edu/~wvandenb/3260/project/credits.html">Credits</a></h4>
